# sdsa

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  ax-code.json  compose.prod.yml  compose.yml  sdsa-policy.default.json  sdsa-policy.json.example
.github/workflows/: docker.yml
BUGS/: BUG-215-preflight-duplicate-qi.md  BUG-216-preflight-title-xss.md  BUG-217-duplicated-key-derivation.md  BUG-218-build-validation-zero-rows.md  BUG-219-sql-hex-no-limit.md  BUG-220-process-toctou.md  BUG-221-preflight-dp-pii-leak.md  BUG-222-preview-missing-det-dp-check.md  BUG-223-preflight-missing-det-key-validation.md  BUG-224-md-escape-xss.md  BUG-225-error-timer-leak.md  BUG-226-global-listener-leak.md  README.md
automatosx/tmp/: bug-analysis-report.md  frontend-bug-analysis.md  low-bug-review-results.md  medium-bug-review-results.md  pytest_report.txt  python-backend-bug-report.md  security-bug-audit.md  test-gap-analysis.md
backend/: README.md  bandit_report.txt  mypy_report.txt  pyproject.toml  ruff_report.txt
backend/src/sdsa/: batch.py  cli.py  ingest.py  main.py  pipeline.py  policy_config.py  preflight.py  report.py
backend/src/sdsa/anonymize/: policy.py  primitives.py
backend/src/sdsa/api/: routes.py
backend/src/sdsa/core/: config.py  logging.py  session.py
backend/src/sdsa/detect/: pii.py  schema.py
backend/src/sdsa/dp/: accountant.py  laplace.py
backend/src/sdsa/frontend/: app.js  index.html
backend/src/sdsa/kanon/: enforce.py
backend/src/sdsa/validate/: metrics.py
backend/tests/: test_anonymize.py  test_api.py  test_cli.py  test_core.py  test_deployment.py  test_detect.py  test_dp.py  test_ingest.py  test_kanon.py  test_pipeline.py  test_policy_config.py  test_preflight.py  test_validate.py
debug-log/20260414-021215Z-65796/: events.jsonl  manifest-latest-tui-worker.json  manifest-main-65796.json  process.jsonl
debug-log/20260414-022617Z-68062/: events.jsonl  manifest-main-68062.json  manifest-tui-worker-68062.json  process.jsonl
debug-log/20260414-034436Z-77474/: events.jsonl  manifest-latest-main.json  manifest-tui-worker-77474.json  process.jsonl
debug-log/20260414-041603Z-83919/: events.jsonl  manifest-latest-tui-worker.json  manifest-main-83919.json  process.jsonl
deploy/nginx/: sdsa.conf
docs/: deployment.md  privacy-model.md
frontend/: app.js  index.html  style.css
samples/: README.md  access_logs.txt  access_logs_large.txt  customers_cjk.csv  customers_large.csv  employees.csv  employees_large.csv  generate.py  transactions.csv  transactions_large.csv  users.sql  users_large.sql
