[project]
name = "sdsa"
version = "0.1.0"
description = "Secure Data Sanitization App backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "polars>=1.0",
    "pyarrow>=16",
    "opendp>=0.11",
    "phonenumbers>=8.13",
    "chardet>=5.2",
    "pydantic>=2.8",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Field name \"schema\".*:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
