[project]
name = "sdsa"
version = "1.1.2"
description = "Self-hostable data sanitization app with PII detection, pseudonymization, k-anonymity, and bounded DP noise"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "DEFAI Private Limited" },
]
keywords = [
    "privacy",
    "pii",
    "data-sanitization",
    "anonymization",
    "pseudonymization",
    "k-anonymity",
    "differential-privacy",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "polars>=1.0",
    "pyarrow>=16",
    "opendp>=0.11",
    "phonenumbers>=8.13",
    "chardet>=5.2",
    "pydantic>=2.8",
    "python-dateutil>=2.9",
]

[project.scripts]
sdsa-server = "sdsa.cli:main"

[project.urls]
Homepage = "https://github.com/defai-digital/sdsa"
Repository = "https://github.com/defai-digital/sdsa"
Documentation = "https://github.com/defai-digital/sdsa/blob/main/README.md"
"Deployment Guide" = "https://github.com/defai-digital/sdsa/blob/main/docs/deployment.md"
"Privacy Model" = "https://github.com/defai-digital/sdsa/blob/main/docs/privacy-model.md"
"Bug Tracker" = "https://github.com/defai-digital/sdsa/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sdsa = ["frontend/*.html", "frontend/*.css", "frontend/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Field name \"schema\".*:UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
